# aver

./: CLAUDE.md  Cargo.toml  LICENSE  MEMORY.md  README.md
.claude/commands/: aver.md
.claude/skills/: aver.md
challenges/: AGENT_PROMPT.md  ASSESSMENT.md  prepare.sh
challenges/bank/: TASK.md  evaluate.sh
challenges/inventory/: .gitignore  AGENT_INSTRUCTIONS.md  TASK.md  evaluate.sh
challenges/text-analyzer/: .gitignore  TASK.md  evaluate.sh
decisions/: architecture.av  challenges.av  decisions.av
docs/: constructors.md  decisions.md  extending.md  services.md  types.md
editors/: README.md
editors/sublime/: Aver.sublime-syntax
editors/vscode/: language-configuration.json  package.json
examples/: app.av  app_dot.av  architecture.av  calculator.av  console_demo.av  decisions.av  effect_sets.av  fibonacci.av  from_claude_chat.av  hello.av  http_demo.av  json.av  lists.av  map.av  mysql.av  network.av  redis.av  secret.av  shapes.av  temperature.av  trust_check.av  type_errors.av  user_record.av
examples/models/: user.av
examples/services/: console_demo.av  disk_demo.av  http_demo.av  tcp_demo.av  weather.av
src/: ast.rs  call_graph.rs  checker.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  replay.rs  resolver.rs  source.rs  tco.rs  typechecker.rs  types.rs  value.rs
src/interpreter/: api.rs  builtins.rs  core.rs  effects.rs  eval.rs  exec.rs  mod.rs  ops.rs  patterns.rs
src/main/: cli.rs  commands.rs  context_cmd.rs  context_data.rs  context_format.rs  repl.rs  (+3 more)
tests/: eval_spec.rs  lexer_spec.rs  parser_spec.rs  typechecker_spec.rs
(+38 files in other folders)
