[package]
name = "aver-lang"
version = "0.1.0"
edition = "2024"
description = "Interpreter for Aver, a programming language designed for AI-assisted development"
license = "MIT"
repository = "https://github.com/jasisz/aver"
keywords = ["language", "interpreter", "programming-language"]
categories = ["compilers"]

[lib]
name = "aver"

[[bin]]
name = "aver"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
thiserror = "1"
ureq = "2"
